--- a/package.json
+++ b/package.json
@@ -3,25 +3,62 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "dev": "next dev",
+    "format": "prettier --write . --log-level warn && stylelint src/**/*.css --fix --quiet && eslint --fix . --quiet",
+    "lint": "prettier --check . --log-level warn && stylelint src/**/*.css --quiet && eslint . --quiet && tsc --noEmit",
+    "start": "next start"
   },
   "dependencies": {
+    "dev": "^0.1.3",
+    "firebase": "^11.6.0",
+    "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.2.4"
+    "react-firebase-hooks": "^5.1.1",
+    "react-icons": "^5.5.0",
+    "tailwind-merge": "^3.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.2.4",
-    "@eslint/eslintrc": "^3"
+    "@commitlint/cli": "^19.8.0",
+    "@commitlint/config-conventional": "^19.8.0",
+    "@next/bundle-analyzer": "^15.2.4",
+    "@next/eslint-plugin-next": "^15.2.4",
+    "@stylistic/eslint-plugin": "^4.2.0",
+    "@svgr/webpack": "^8.1.0",
+    "@tailwindcss/postcss": "^4.0.17",
+    "@types/negotiator": "^0.6.3",
+    "@types/node": "^22.13.13",
+    "@types/qs": "^6.9.18",
+    "@types/react": "^19.0.12",
+    "@types/react-dom": "^19.0.4",
+    "@typescript-eslint/eslint-plugin": "^8.28.0",
+    "@typescript-eslint/parser": "^8.28.0",
+    "autoprefixer": "^10.4.21",
+    "cssnano": "^7.0.6",
+    "eslint": "^9.23.0",
+    "eslint-config-next": "^15.2.4",
+    "eslint-config-prettier": "^10.1.1",
+    "eslint-plugin-jsdoc": "^50.6.9",
+    "eslint-plugin-json": "^4.0.1",
+    "eslint-plugin-prettier": "^5.2.5",
+    "husky": "^9.1.7",
+    "jsonc-eslint-parser": "^2.4.0",
+    "lint-staged": "^15.5.0",
+    "postcss": "^8.5.3",
+    "postcss-preset-env": "^10.1.5",
+    "prettier": "^3.5.3",
+    "prettier-plugin-jsdoc": "^1.3.2",
+    "prettier-plugin-multiline-arrays": "^4.0.3",
+    "prettier-plugin-organize-imports": "^4.1.0",
+    "prettier-plugin-packagejson": "^2.5.10",
+    "prettier-plugin-sort-json": "^4.1.1",
+    "prettier-plugin-tailwindcss": "^0.6.11",
+    "stylelint": "^16.17.0",
+    "stylelint-config-prettier": "^9.0.5",
+    "stylelint-config-recess-order": "^6.0.0",
+    "stylelint-config-standard": "^37.0.0",
+    "tailwindcss": "^4.0.17",
+    "typescript": "^5.8.2"
   }
 }
