--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.1",
     "tailwind-merge": "^3.1.0"
   },
   "devDependencies": {
