--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-fox-toast": "^1.10.20",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.1",
     "tailwind-merge": "^3.1.0"
