--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dev": "^0.1.3",
     "firebase": "^11.6.0",
+    "formik": "^2.4.6",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -19,7 +20,8 @@
     "react-fox-toast": "^1.10.20",
     "react-icons": "^5.5.0",
     "react-select": "^5.10.1",
-    "tailwind-merge": "^3.1.0"
+    "tailwind-merge": "^3.1.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
