--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "chart.js": "^4.4.8",
     "dev": "^0.1.3",
     "firebase": "^11.6.0",
-    "formik": "^2.4.6",
     "next": "15.2.4",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-firebase-hooks": "^5.1.1",
     "react-fox-toast": "^1.10.20",
